@@ -1,2 +1,0 @@
-﻿49976
-C:/Users/Joshua Navarro/Desktop/Godot_v3.5-stable_mono_win64/Godot_v3.5-stable_mono_win64.exe
