@@ -3,6 +3,11 @@ Key:
 ~ Changed Content/Feature or Bugfix.
 - Removed Content/Feature.
 
+~~~~~~~~~~~~0.0.1 Revitalize 12-12-2022 xx.xx P.M~~~~~~~~~~~~~~
+~ElectricFurnaces (and their upgrade tiers) now glow when smelting items.
+~Reworked some logic regarding the LightManager class to work better, but it might still have issues since that original code was written years ago so there might be cases where I should makde different changes.
+    -These changes would be made in CustomObject.cs or CustomItem.cs initializeLightSource, where maybe there should just be one initial light source???
+
 ~~~~~~~~~~~~0.0.1 Revitalize 12-08-2022 xx.xx P.M~~~~~~~~~~~~~~
 ~Fixed SDV revitalize tool to generate c# vars as const and not static
 +Added in proper graphics for burner generator
